--- a/config/config.yaml
+++ b/config/config.yaml
@@ -97,22 +97,34 @@ weight:
 
 # name 可以定义任意名称，只具有显示作用，即使项目运行了几天后，忽然改掉 name 也不会影响代码的正常运行
 platforms:
-  - id: "toutiao"
-    name: "今日头条"
-  - id: "baidu"
-    name: "百度热搜"
-  - id: "wallstreetcn-hot"
-    name: "华尔街见闻"
-  - id: "thepaper"
-    name: "澎湃新闻"
+  # - id: "toutiao"
+  #  name: "今日头条"
+  # - id: "baidu"
+  #  name: "百度热搜"
+  # - id: "wallstreetcn-hot"
+  #  name: "华尔街见闻"
+  # - id: "thepaper"
+  #  name: "澎湃新闻"
+  - id: "hackernews"
+    name: "Hacker News"
+  - id: "github"
+    name: "GitHub"
+  - id: "v2ex"
+    name: "V2EX"
+   - id: "sspai"
+    name: "少数派"
+  - id: "producthunt"
+    name: "ProductHunt"
+  - id: "zaobao"
+    name: "联合早报"
   - id: "bilibili-hot-search"
     name: "bilibili 热搜"
   - id: "cls-hot"
     name: "财联社热门"
   - id: "ifeng"
     name: "凤凰网"
-  - id: "tieba"
-    name: "贴吧"
+  # - id: "tieba"
+  #  name: "贴吧"
   - id: "weibo"
     name: "微博"
   - id: "douyin"
